backend/kube/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitch-logger-query-interface-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitch-logger-query-interface-backend
  template:
    metadata:
      labels:
        app: twitch-logger-query-interface-backend
    spec:
      containers:
        - name: twitch-logger-query-interface-backend
          image: homelab.local:5000/twitch-logger-query-interface-backend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
