backend/kube/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitch-logger-query-interface-backend-service
spec:
  selector:
    app: twitch-logger-query-interface-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30020
